--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.LoginActivity" />
+        <activity android:name=".view.TvGuideActivity" />
     </application>
 
 </manifest>
