--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:${arch_version}"
     implementation "com.google.firebase:firebase-auth:${playServiceVer}"
     implementation 'com.firebaseui:firebase-ui-auth:3.1.0'
+    compile 'com.github.bumptech.glide:glide:4.3.0'
 
     implementation "com.google.firebase:firebase-database:${playServiceVer}"
     annotationProcessor "android.arch.lifecycle:compiler:${arch_version}"
